# robotis_arm

my_controller/: CMakeLists.txt  controller_plugins.xml  package.xml
my_controller/config/: pirobot_control.yaml
my_controller/src/: my_controller.cpp
robotic_arm/: CMakeLists.txt  package.xml
robotic_arm/config/: arm_controller.yaml  controller.yaml  gripper_controller.yaml  new_controller.yaml  robotic.yaml  ros_controllers.yaml  trajectory.yaml
robotic_arm/launch/: controller_utils.launch  last_controller.launch  new_controller.launch  open_manipulator_controller.launch  open_manipulator_gazebo.launch  open_manipulator_rviz.launch  open_manipulator_upload.launch  robotic_arm_gazebo.launch  robotic_arm_trajectory.launch  robotic_control.launch  ros_controllers.launch  rviz_robotic_arm.launch  rviz_xacro_robotic_arm.launch  trajectory.launch  upload.launch
robotic_arm/rviz/: open_manipulator.rviz  robot.rviz  robotik_arm.rviz
robotic_arm/scripts/: moveit_fk_demo.py  robotic_arm_gripper.py  tracking_opencv.py  trajectory_demo.py
robotic_arm/src/: omx_gripper_sub_publisher.cpp  open_manipulator_teleop_keyboard.cpp
robotic_arm/urdf/: open_manipulator.gazebo.xacro  open_manipulator.transmission.xacro  open_manipulator.urdf.xacro  open_manipulator_robot.urdf.xacro  robotic_arm.gazebo  robotic_arm.urdf  robotic_arm.xacro
robotic_arm/worlds/: empty.world
robotic_arm_gazebo/: CMakeLists.txt  package.xml
robotic_arm_moveit/: .setup_assistant  CMakeLists.txt  package.xml
robotic_arm_moveit/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  robotic_arm.srdf  ros_controllers.yaml
robotic_arm_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  (+11 more)
robotic_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
robotik_kol_gazebo/: CMakeLists.txt  package.xml
robotik_kol_pkg/: CMakeLists.txt  blocks_poses_publisher.cpp  blocks_spawner.cpp  package.xml  robot_kol1.config  ur5_gripper.py  ur5_vision.py  urdf.rviz
robotis_arm/: CMakeLists.txt  package.xml
(+74 files in other folders)
